<resources>
    <string name="app_name">NGlobal</string>
    <string name="discover_news">Discover News</string>
    <string name="sport">Sport</string>
    <string name="cinema">Cinema</string>
    <string name="musics">Musics</string>
    <string name="business">Business</string>
    <string name="health">Health</string>
    <string name="politics">Politics</string>
    <string name="sports">Sports</string>
</resources>