<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".HomeActivity"
    >

<LinearLayout
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    tools:ignore="UselessParent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/discover_news"
        android:textSize="32sp"
        android:textColor="@color/white"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="20dp"
        />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layoutDirection="locale"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sports"
            android:textSize="16sp"
            android:paddingHorizontal="14dp"
            android:layout_marginStart="1dp"
            android:paddingVertical="5dp"
            android:background="@drawable/rounded_corner_view"
            android:textColor="@color/white"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:paddingHorizontal="14dp"
            android:paddingVertical="5dp"
            android:text="@string/politics"
            android:textColor="@android:color/darker_gray"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:paddingHorizontal="14dp"
            android:paddingVertical="5dp"
            android:text="@string/business"
            android:textColor="@android:color/darker_gray"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:paddingHorizontal="14dp"
            android:paddingVertical="5dp"
            android:text="@string/health"
            android:textColor="@android:color/darker_gray"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/musics"
            android:textSize="16sp"
            android:paddingHorizontal="14dp"
            android:paddingVertical="5dp"
            android:textColor="@android:color/darker_gray"
        />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cinema"
            android:textSize="16sp"
            android:paddingHorizontal="14dp"
            android:paddingVertical="5dp"
            android:layout_marginLeft="5dp"
            android:textColor="@android:color/darker_gray"
        />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sport"
            android:textSize="16sp"
            android:paddingHorizontal="14dp"
            android:paddingVertical="5dp"
            android:background="@color/blue"
            android:layout_marginLeft="5dp"
            android:textColor="@android:color/darker_gray"
        />
    </LinearLayout>
    </HorizontalScrollView>
</LinearLayout>
</RelativeLayout>